# wexif

./: .gitignore  Cargo.toml  README.md  exif.json  mcp-config.example.json  mcp-config.json
.cargo/: config.toml
.github/workflows/: release.yml
src/: ai_generator.rs  exif_data.rs  exif_reader.rs  exif_writer.rs  lib.rs  main.rs  mcp_server.rs
