[package]
name = "wexif"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
kamadak-exif = "0.5"
image = "0.25"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
dirs = "5.0"
